infra/k8s/20-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devnotes-api
  namespace: devnotes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devnotes-api
  template:
    metadata:
      labels:
        app: devnotes-api
    spec:
      containers:
        - name: api
          image: ghcr.io/alex-correa-dev/devnotes-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: devnotes-api-svc
  namespace: devnotes
spec:
  type: ClusterIP
  selector:
    app: devnotes-api
  ports:
    - port: 4000
      targetPort: 4000
