infra/k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devnotes-ingress
  namespace: devnotes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.devnotes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devnotes-api-svc
                port:
                  number: 4000
    - host: web.devnotes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devnotes-web-svc
                port:
                  number: 3000
